Playing with the layout

--- a/config/crfkb.conf
+++ b/config/crfkb.conf
@@ -1,1 +1,16 @@
+# Power settings - Allow sleep and timeout
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=5400000
+CONFIG_ZMK_SLEEP=y
+
+# Set maximum bluetooth connections
+CONFIG_BT_MAX_CONN=5
+
+# Enable mouse emulation
+CONFIG_ZMK_MOUSE=y
+
+# Power setting to smooth mouse movement
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Change setting to improve mouse perf
+CONFIG_BT_GAP_AUTO_UPDATE_CONN_PARAMS=n
+
